# Pennyful

./: README.md  clear_dev_db.sh  package-lock.json  package.json  svelte.config.js
.cursor/rules/pr-review/: RULE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: americanexpresstransactions.csv  bankofamericatransactions.csv  bankofamericatransactions.txt  wellsfargotransactions.csv
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20251213055331_init.sql  20251224035610_seed_default_categories.sql  20251224035610_seed_uncategorized_category.sql  20260705182652_plaid_tokens_table.sql  20260715191417_add_budget_table.sql
src-tauri/src/: db.rs  lib.rs  types.rs
src-tauri/src/accounts/: commands.rs  queries.rs
src-tauri/src/banks/: commands.rs  queries.rs
src-tauri/src/categories/: commands.rs  queries.rs
src-tauri/src/credentials/: commands.rs
src-tauri/src/fixtures/: accounts.sql  accounts_of_item.sql  budgets.sql  plaid_sync.sql  transactions.sql
src-tauri/src/importers/: american_express.rs  bank_of_america.rs  commands.rs  plaid.rs  types.rs  wells_fargo.rs
src-tauri/src/plaid/: commands.rs  queries.rs  types.rs
src-tauri/src/transactions/: commands.rs  queries.rs
src/lib/: types.ts
src/lib/api/: accounts.ts  categories.ts  importers.ts  plaid.ts  transactions.ts
src/lib/components/: AccountCard.svelte  BankAccountCard.svelte  BudgetInput.svelte  (+28 more)
src/routes/: +layout.svelte  +page.svelte
(+10 files in other folders)
