[package]
name = "pennyful"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pennyful_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
csv = "1.4.0"
rust_decimal = { version = "1.39.0", features = [ "serde", "macros" ] }
tauri-plugin-devtools = "2.0.0"
plaid = "9.0.1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-deep-link = "2"
dotenvy_macro = "0.15.7"
dotenvy = "0.15.7"
httpclient = "0.21.3"
keyring = "4.1.4"
tauri-plugin-store = "2"
